<resources>
    <string name="app_name">App 360</string>

    <!--    nav drawer items-->
    <string name="nav_header_desc">TODO</string>
    <string name="email">Email</string>
    <string name="Home">Dashboard</string>
    <string name="change_pass">Change Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="reports">Reports</string>
    <string name="other_reports">Other Reports</string>
    <string name="premium">Premium</string>
    <string name="sales_management">Sales Management</string>
    <string name="map">Map</string>
    <string name="pipelining_and_funnel">Pipelining &amp; Funnel Management</string>
    <string name="campaign_management">Campaign Management &amp; Tracker</string>
    <string name="score_card">Score Card</string>
    <string name="user_profiling">User Profiling</string>
    <string name="employee_360">Employee 360</string>
    <string name="customer_360">Customer 360</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="PB">PB</string>
    <string name="BDO">BDO</string>
    <string name="SQC">SQC</string>
    <string name="calls">Calls</string>
    <string name="visits">Visits</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--    Login Screen-->
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="send_ver">Send Verification Code On</string>
    <string name="username">Username</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_otp">Please enter the OTP received on your mobile number</string>
    <string name="enter_otp_share">Please refrain from sharing this OTP with anyone.</string>
    <string name="random_number">03008457575</string>
    <string name="one_time_otp">One-Time Password (OTP)</string>
    <string name="register_now">Register Now!</string>
    <string name="time_stamp">04:20</string>
    <string name="change_pas">Change Password</string>
    <string name="reset_pas">Reset Password</string>
    <string name="fp_pr_both_pass_must_match">Both passwords must match</string>
    <string name="resend_OTP">Resend OTP</string>
    <string name="otp_not_rec"><u>OTP Not Received?</u></string>
    <string name="current_password">Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="alphanumeric">Password should be alphanumeric.</string>
    <string name="update_password">Update Password</string>
    <string name="minimum">Minimum password length should be 8 characters with a maximum length of 16 characters. Special characters are optional.</string>
    <string name="your_new">Your new Password must be different from your previous used password</string>
    <string name="error_empty_email">Please Provide User Name</string>
    <string name="error_empty_pass">Please Provide Password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="swipe_up_to_log_in">Swipe Up to Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="target_vs_achievement">Target vs Achievement</string>


    <!-- Search  -->
    <string name="region">Search Region</string>
    <string name="area">Search Area</string>
    <string name="branch">Search Branch</string>
    <string name="date">Search Date</string>
    <string name="tap_to_select_region">Tap To Select Region</string>
    <string name="tap_to_select_area">Tap To Select Area</string>
    <string name="tap_to_select_branch">Tap To Select Branch</string>
    <string name="tap_to_select_date">Tap To Select Date</string>
    <string name="reset">RESET</string>
    <string name="apply">APPLY</string>
    <string name="title_activity_card_level2">CardLevel2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>

    <!--    -->
    <string name="Region">Region</string>
    <string name="customer_name">Customer</string>
    <string name="area_name">Area</string>
    <string name="branch_name">Branch</string>
    <string name="last_day">Last Day</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="today">Today</string>
    <string name="number2">1055</string>
    <string name="number1">317</string>
    <string name="delta">Delta</string>

    <!--    Rating-->

    <string name="rating_excellent">Excellent</string>
    <string name="rating">Rating</string>
    <string name="no_of_branches">No of Branches: </string>

    <!--  Card Dialog  -->
    <string name="cif_id">CIF ID:</string>
    <string name="no_of_acc">No of Account:</string>
    <string name="no_of_prod">No of Product:</string>
    <string name="prod_name">Product Name:</string>
    <string name="account">Account:</string>
    <string name="allow_fingerprint">Would you like to enable Fingerprind ID?</string>
    <string name="allow_fingerprint_desc">Enabling Fingerprint ID will allow you to log into your App360 instantly</string>
    <string name="enable">Enable Fingerprint</string>

    <string name="number3">1231231</string>
    <string name="number4">0231 1234 1234 1232</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="error">Error</string>
    <string name="success">Success</string>
</resources>