<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginNavFragment.ChangePasswordFragment">

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/constraintLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:layout_marginTop="@dimen/_40sdp"-->
<!--        android:background="@color/purple_dark"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <ImageButton-->
<!--            android:id="@+id/press_back"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_10sdp"-->
<!--            android:visibility="invisible"-->
<!--            android:background="@null"-->
<!--            android:src="@drawable/ic_back"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->


<!--        <TextView-->
<!--            style="@style/textViewStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_18sdp"-->
<!--            android:text="@string/change_pas"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="@dimen/_16sdp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/press_back"-->
<!--            app:layout_constraintStart_toEndOf="@+id/press_back" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">


            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/your_new"
                android:textColor="@color/grey2"
                android:textSize="@dimen/_10sdp" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/current_password"
                android:textSize="17sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxBackgroundMode="outline"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cp_et_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/current_password"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enter_new_password"
                android:textSize="17sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxBackgroundMode="outline"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cp_et_new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/enter_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/alphanumeric"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/re_enter_new_password"
                android:textSize="17sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxBackgroundMode="outline"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cp_et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/re_enter_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/both_passwords_must_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/fp_pr_both_pass_must_match"
                android:textColor="@color/red"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_sub_tv6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cp_btn_change_password"
                style="@style/MaterialThemeButtonNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/update_password"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/_7sdp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>