<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dialog.FingerprintPermissionDialog.FingerprintPermissionDialogFragment">


    <ImageView
        android:id="@+id/iv"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/fingerprint"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/allow_fingerprint"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/allow_fingerprint_desc"
        android:textSize="@dimen/_8sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbEnable"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_45sdp"
        android:elevation="@dimen/_10sdp"
        app:cornerRadius="@dimen/_5sdp"
        android:text="@string/enable"
        android:textAllCaps = "false"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginVertical="@dimen/_20sdp"
        app:backgroundTint="@color/purple_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>